log/build_2024-11-28_19-26-15/myagv_ros2_debug/stderr.log
  File "/home/sara/myagv_ros2/install/myagv_ros2_debug/lib/python3.10/site-packages/myagv_ros2_debug/encoder_test.py", line 470
    self.get_logger().error(f'Error in timer callback: {str(e)})
                            ^
SyntaxError: unterminated string literal (detected at line 470)

